--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 <title>Kari Stolt portfolio</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="styles.css">
 </head>
 <body class="bg-body">
@@ -29,7 +30,5 @@
     </div>
 </section>
 
-
-<script src="js/main.js"></script>
 </body>
 </html>
