--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
 <section class="about-page">
   <h2 class="center" style="padding-top: 60px;">Tietoja minusta</h2>
     <img class="profile" src="profiilikuva.jpg" alt="">
-    <div class="about-content">
+    <div class="about-content" id="aboutContent">
         <p>Olen Metropolia ammattikorkeakoulusta keväällä 2020 valmistunut mediatekniikan insinööri. Vapaa-ajalla teen omia web-kehitysprojekteja lähinnä Javascriptiä HTML:lää ja CSS:ää käyttäen ja opiskelen omatoimisesti tietoturvan eri osa-alueita. Muita vapaa-ajan harrastuksiani ovat mm. lukeminen, videopelit, matkustelu ja kuntosali. <br><br> Mediatekniikan opinnot koostuivat suurelta osin erilaisista web-kehitykseen liittyvistä projekteista. Opinnäytetyönä tein tutkielman ja soveltuvuusselvitys sovellukset virtuaalitodellisuuden ja lisätyn todellisuuden käyttömahdollisuuksista opetuskäytössä. Sovellukset toteutin Unity pelimoottorilla, jossa koodikielenä käytin C#-kieltä.</p>
         <br>
         <span class="skills">
@@ -28,7 +28,7 @@
                 <li>Angular</li>
             </ul>
         </span>
-        <span class="contacts">
+        <span class="contacts" id="contacts">
             <ul>
                 <p>Yhteystiedot:</p>
                 <li>email: stolt.k@gmail.com</li>
@@ -40,6 +40,6 @@
     
 
 </section>
-
+<script src="script.js"></script>
 </body>
 </html>
